<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>gr.forth.ics.isl</groupId>
    <artifactId>THEMAS</artifactId>
    <version>1.3</version>
    <name>THEMAS</name>
    <packaging>war</packaging>     
    <licenses>
        <license>
            <name>EUPL v.1.1</name>
            <url>http://ec.europa.eu/idabc/eupl</url>            
            <distribution>repo</distribution>
        </license>        
    </licenses>
    <properties>
        <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.javadoc.skip>true</maven.javadoc.skip>
        <timestamp>${maven.build.timestamp}</timestamp>
        <maven.build.timestamp.format>yyyy-MM-dd_HH_mm_ss</maven.build.timestamp.format>
    </properties>
    <repositories>       
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>
    <dependencies>
        <dependency>
            <groupId>com.github.isl</groupId>
            <!--<groupId>gr.forth.ics.isl</groupId>-->
            <artifactId>Neo4j-sisapi</artifactId>
            <version>1.3</version>
        </dependency>
        <dependency>
            <groupId>org.neo4j</groupId>
            <artifactId>neo4j</artifactId>
            <version>3.2.5</version>
        </dependency>  
        <dependency>
            <groupId>org.tuckey</groupId>
            <artifactId>urlrewritefilter</artifactId>
            <version>4.0.3</version>
        </dependency>
        <dependency>
            <groupId>commons-fileupload</groupId>
            <artifactId>commons-fileupload</artifactId>
            <version>1.3.3</version>
        </dependency>
        <dependency>
            <groupId>net.sf.kxml</groupId>
            <artifactId>kxml2</artifactId>
            <version>2.3.0</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.10</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>javax</groupId>
            <artifactId>javaee-web-api</artifactId>
            <version>7.0</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <includes>
                    <include>THEMAS_build_version.txt</include>
                </includes>
                <filtering>true</filtering>
            </resource>
        </resources>
        <plugins>
            
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    
                    <source>1.8</source>
                    <target>1.8</target>
                    <compilerArguments>
                        <endorseddirs>${endorsed.dir}</endorseddirs>
                        
                    </compilerArguments>
                    <showDeprecation>true</showDeprecation>
                    <debug>true</debug>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>2.3</version>
                <configuration>
                    <failOnMissingWebXml>false</failOnMissingWebXml>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>2.6</version>
                <executions>
                    <execution>
                        <phase>validate</phase>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${endorsed.dir}</outputDirectory>
                            <silent>true</silent>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>javax</groupId>
                                    <artifactId>javaee-endorsed-api</artifactId>
                                    <version>7.0</version>
                                    <type>jar</type>
                                </artifactItem>
                            </artifactItems>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <executions>
                    
                  <execution>
                    <id>create-empty-directory</id>
                    <phase>process-classes</phase>
                    <goals>
                      <goal>run</goal>
                    </goals>
                    <configuration>
                      <tasks>
                          <mkdir dir="${project.build.directory}/${project.build.finalName}/third-party-javascript/chosen" />
                          <mkdir dir="${project.build.directory}/${project.build.finalName}/third-party-javascript/ckeditor" />
                          <mkdir dir="${project.build.directory}/${project.build.finalName}/third-party-javascript/mktree" />
                          <mkdir dir="${project.build.directory}/${project.build.finalName}/third-party-javascript/wztooltip" />
                          <mkdir dir="${project.build.directory}/${project.build.finalName}/LogFiles" />
                          <mkdir dir="${project.build.directory}/${project.build.finalName}/MonitorAutomaticBackups" />
                          <mkdir dir="${project.build.directory}/${project.build.finalName}/SVGproducer/SVG_temporary_files" />
                          <mkdir dir="${project.build.directory}/${project.build.finalName}/Save_Results_Displays/Save_Results_temporary_files" />
                          <mkdir dir="${project.build.directory}/${project.build.finalName}/Uploads" />
                          <mkdir dir="${project.build.directory}/${project.build.finalName}/WEB-INF/SystemLogs" />    
                          
                      </tasks>                      
                    </configuration>
                  </execution>
                  
                  <execution>
                    <!--   attention war file does not contain the timestamp -->
                    <id>update-deployment-timestamp</id>
                    <phase>package</phase>
                    <goals>
                      <goal>run</goal>
                    </goals>
                    <configuration>
                      <tasks>
                            <replace dir="${project.build.directory}/${project.build.finalName}/xml-xsl" encoding="UTF-8" >
                                
                                <!--<include name="page_head_html.xsl"/>
                                <include name="Login.xsl"/>
                                <include name="page_footer.xsl"/>-->
                                <include name="**/*.xsl"/>
                                <replacefilter token="@DeploymentTimestamp@" value="${timestamp}" />
                            </replace> 
                            <replace dir="${project.build.directory}/${project.build.finalName}/help-files" encoding="UTF-8" >                                
                                <include name="**/*.html"/>
                                <replacefilter token="@DeploymentTimestamp@" value="${timestamp}" />
                            </replace> 
                            <replace dir="${project.build.directory}/${project.build.finalName}/Save_Results_Displays" encoding="UTF-8" >
                                <include name="**/*.xsl"/>
                                <replacefilter token="@DeploymentTimestamp@" value="${timestamp}" />
                            </replace> 
                            <replace dir="${project.build.directory}/${project.build.finalName}/SVGproducer" encoding="UTF-8" >
                                <include name="**/*.xsl"/>
                                <replacefilter token="@DeploymentTimestamp@" value="${timestamp}" />
                            </replace> 
                            <!--<replace dir="${project.build.directory}/${project.build.finalName}/xml-xsl/HiddenActions" >
                                <include name="LoginAdmin.xsl"/>
                                <replacefilter token="@DeploymentTimestamp@" value="${timestamp}"/>
                            </replace> -->
                      </tasks>                      
                    </configuration>
                  </execution>
                  
                  <!-- configuration in order to change in source file the timestamp
                       build target and war and then reset source file
                       
                   Attention !!! In netbeans right click prject run copy static sources on save should not be checked -->
                  <!--<execution>
                    <id>update-source-timestamp</id>
                    <phase>prepare-package</phase>
                    <goals>
                      <goal>run</goal>
                    </goals>
                    <configuration>
                      <tasks>
                            <replace dir="src/main/webapp/xml-xsl" >
                            <include name="page_head_html.xsl"/>
                                <replacefilter token="@DeploymentTimestamp@" value="${timestamp}"/>
                            </replace> 
                      </tasks>                      
                    </configuration>
                  </execution>
                  <execution>
                    <id>reset-source-timestamp</id>
                    
                    <phase>package</phase>
                    <goals>
                      <goal>run</goal>
                    </goals>
                    <configuration>
                      <tasks>
                            <replace dir="src/main/webapp/xml-xsl" >
                            <include name="page_head_html.xsl"/>
                                <replacefilter token="${timestamp}" value="@DeploymentTimestamp@"/>
                            </replace> 
                      </tasks>                      
                    </configuration>
                  </execution>-->
                </executions>
              </plugin>
              
        </plugins>
    </build>
</project>
